[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nmkha-github <nguyenminhkha2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.37"
redis = "^5.2.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
